--- a/modules/smart-agent_couchbase/conf/readme.yaml
+++ b/modules/smart-agent_couchbase/conf/readme.yaml
@@ -1,5 +1,5 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-couchbase.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-couchbase.md'
 
 source_doc:
