--- a/modules/smart-agent_cassandra-nodetool/conf/readme.yaml
+++ b/modules/smart-agent_cassandra-nodetool/conf/readme.yaml
@@ -1,6 +1,6 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/jmx.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/jmx.md'
 
 source_doc: |
 
