--- a/modules/smart-agent_dns/conf/readme.yaml
+++ b/modules/smart-agent_dns/conf/readme.yaml
@@ -1,10 +1,10 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/telegraf-dns.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/telegraf-dns.md'
 
 source_doc: |
   There is no SignalFx official integration for `dns` but there is still a
-  [monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/telegraf-dns.html) to use.
+  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/telegraf-dns.md) to use.
 
   ### Monitors
 
