--- a/modules/smart-agent_docker/conf/readme.yaml
+++ b/modules/smart-agent_docker/conf/readme.yaml
@@ -1,10 +1,10 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/docker-container-stats.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/docker-container-stats.md'
 
 source_doc: |
   Follow the
-  [docker-container-stats](https://docs.signalfx.com/en/latest/integrations/agent/monitors/docker-container-stats.html)
+  [docker-container-stats](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/docker-container-stats.md)
   monitor configuration to collect metrics.
 
   It requires to enable the following `extraMetrics`:
