--- a/modules/smart-agent_genericjmx/conf/readme.yaml
+++ b/modules/smart-agent_genericjmx/conf/readme.yaml
@@ -1,12 +1,12 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-genericjmx.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-genericjmx.md'
   - name: Collectd plugin
     url: 'https://collectd.org/wiki/index.php/Plugin:GenericJMX'
 
 source_doc: |
   There is no SignalFx official integration for `jmx` but there is still a
-  [monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-genericjmx.html) to use.
+  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-genericjmx.md) to use.
 
   ### Agent
 
