--- a/modules/smart-agent_health-checker/conf/readme.yaml
+++ b/modules/smart-agent_health-checker/conf/readme.yaml
@@ -1,13 +1,13 @@
 documentations:
   - name: Smart Agent monitor
-    url: https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-health-checker.html
+    url: https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-health-checker.md
   - name: Collectd source code health_checker.py
     url: https://github.com/signalfx/collectd-health_checker/blob/master/health_checker.py
 
 source_doc: |
   ### Monitor
 
-  The detector of this module is based on metrics reported by the [collectd/health-checker](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-health-checker.html) monitor.
+  The detector of this module is based on metrics reported by the [collectd/health-checker](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-health-checker.md) monitor.
 
   It can monitor:
     * network port (use `health_checker_value`)
