--- a/modules/smart-agent_kubernetes-volumes/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-volumes/conf/readme.yaml
@@ -1,6 +1,6 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubernetes-volumes.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-volumes.md'
 
 source_doc: |
   ### Agent
@@ -14,7 +14,7 @@ source_doc: |
 
   The detectors in this module are based on metrics reported by the following monitors:
 
-  * [kubernetes-volumes](https://docs.signalfx.com/en/latest/integrations/agent/monitors/kubernetes-volumes.html)
+  * [kubernetes-volumes](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/kubernetes-volumes.md)
 
   The `kubernetes-volumes` monitor does support non persistent volume types filtered out in this module before
   `signalfx-agent` `v5.3.2` version.
