--- a/modules/smart-agent_mdadm/conf/readme.yaml
+++ b/modules/smart-agent_mdadm/conf/readme.yaml
@@ -1,12 +1,12 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-php-fpm.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-php-fpm.md'
   - name: Collectd plugin
     url: 'https://collectd.org/wiki/index.php/Plugin:MD'
 
 source_doc: |
   There is no SignalFx official integration nor a monitor for `mdadm` but we use the
-  [collectd/custom monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-custom.html)
+  [collectd/custom monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-custom.md)
   with bundled `md` collectd plugin.
 
   ### Monitors
