--- a/modules/smart-agent_memcached/conf/readme.yaml
+++ b/modules/smart-agent_memcached/conf/readme.yaml
@@ -1,6 +1,6 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-memcached.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-memcached.md'
   - name: Collectd plugin
     url: 'https://collectd.org/wiki/index.php/Plugin:memcached'
 
