--- a/modules/smart-agent_nagios-status-check/conf/readme.yaml
+++ b/modules/smart-agent_nagios-status-check/conf/readme.yaml
@@ -1,6 +1,6 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/nagios.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/nagios.md'
   - name: Nagios checks guidelines
     url: 'https://nagios-plugins.org/doc/guidelines.html#AEN78'
 
