--- a/modules/smart-agent_php-fpm/conf/readme.yaml
+++ b/modules/smart-agent_php-fpm/conf/readme.yaml
@@ -1,16 +1,16 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-php-fpm.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-php-fpm.md'
   - name: Collectd plugin
     url: 'https://collectd.org/wiki/index.php/Plugin:cURL-JSON'
 
 source_doc: |
   There is no SignalFx official integration for `php-fpm` but there is still a
-  [monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-php-fpm.html) to use.
+  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-php-fpm.md) to use.
 
   ### Monitors
 
   This monitor is only available for agent `>= 5.2.0` but for previous versions you can use the generic
-  [collectd/custom](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-custom.html)
+  [collectd/custom](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-custom.md)
   monitor with [this
   configuration](https://github.com/signalfx/signalfx-agent/blob/master/pkg/monitors/collectd/php/php.tmpl).
