--- a/modules/smart-agent_supervisor/conf/readme.yaml
+++ b/modules/smart-agent_supervisor/conf/readme.yaml
@@ -1,12 +1,12 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/supervisor.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/supervisor.md'
   - name: Supervisor state definition
     url: 'http://supervisord.org/subprocess.html#process-states'
 
 source_doc: |
   There is no SignalFx official integration for `supervisor` but there is still a
-  [monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/supervisor.html) to use.
+  [monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/supervisor.md) to use.
 
   ### Monitors
 
