--- a/modules/smart-agent_system-common/conf/readme.yaml
+++ b/modules/smart-agent_system-common/conf/readme.yaml
@@ -1,14 +1,14 @@
 documentations:
   - name: Smart Agent monitor host-metadata
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/host-metadata.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/host-metadata.md'
   - name: Smart Agent monitor cpu
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/cpu.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/cpu.md'
   - name: Smart Agent monitor load
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/load.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/load.md'
   - name: Smart Agent monitor filesystems
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/filesystems.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/filesystems.md'
   - name: Smart Agent monitor memory
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/memory.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/memory.md'
 
 source_doc: |
   There is no one official integration for system generic metrics but instead multiple monitors to fetch
@@ -30,8 +30,8 @@ source_doc: |
   #### Load
 
   You have two choices to use load based detectors:
-    - either keep the `per_cpu_enabled` enabled (variable default value) __and__ define `perCPU: true` in the [load monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/load.html) configuration (for Kubernetes, you can use `loadPerCPU` option from the Helm chart available from `1.2.0` version).
-    - or override the `per_cpu_enabled` to `false` __and__ keep the default configuration for the [load monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/load.html) with `perCPU: false` or not defined
+    - either keep the `per_cpu_enabled` enabled (variable default value) __and__ define `perCPU: true` in the [load monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/load.md) configuration (for Kubernetes, you can use `loadPerCPU` option from the Helm chart available from `1.2.0` version).
+    - or override the `per_cpu_enabled` to `false` __and__ keep the default configuration for the [load monitor](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/load.md) with `perCPU: false` or not defined
 
   In both cases, the goal is to get alerts based on the __ratio__ of load by dividing the original load per the number of CPU/cores which is the only way to get generic and relevant alerts for load.
   It mainly depends if you want to collect 2 metrics instead of 1 and if you want the load one to be raw or already averaged.
