--- a/modules/smart-agent_systemd-services/conf/readme.yaml
+++ b/modules/smart-agent_systemd-services/conf/readme.yaml
@@ -1,11 +1,11 @@
 documentations:
   - name: Smart Agent monitor
-    url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-systemd.html'
+    url: 'https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-systemd.md'
 
 source_doc: |
   ### Monitor
 
-  The detector of this module is based on metrics reported by the [collectd/systemd](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-systemd.html) monitor.
+  The detector of this module is based on metrics reported by the [collectd/systemd](https://github.com/signalfx/signalfx-agent/blob/main/docs/monitors/collectd-systemd.md) monitor.
 
   For example, to monitor the `toto.service` and `titi.service` on your host, your SignalFX agent should look like this:
 
